# system-prompt-router

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_basic.py  todo.md
config/: config.yaml  default_prompts.json
diagrams/: architecture.puml  architecture_simple.puml
docs/: design.md
examples/: basic_usage.py
src/sentence_transformers/: __init__.py
src/system_prompt_router/: __init__.py  __main__.py  cli.py  config.py  embeddings.py  library.py  router.py  similarity.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_library.py  test_router.py  test_similarity.py
